[package]
name = "rsaudit"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.12.2"
ssh2 = "0.9.5"
mlua = { version = "0.11.4", features = ["lua54", "async", "send"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
serde_json = "1.0.145"
clap = { version = "4.5.51", features = ["derive"] }
tokio = { version="1.48.0", features=["full"] }
async-ssh2-tokio = "0.11.0"
